--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:tools="http://schemas.android.com/tools">
-     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.CALL_PHONE"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
-
-
 
     <application
         android:allowBackup="true"
@@ -17,7 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BMICALC_MUINEW"
         tools:targetApi="31">
-       <activity
+        <activity
+            android:name=".more_about_BMI"
+            android:exported="false" />
+        <activity
             android:name=".bmi_chat"
             android:exported="false" />
         <activity
