--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,12 @@
         android:theme="@style/Theme.BMICALC_MUINEW"
         tools:targetApi="31">
         <activity
-            android:name=".more_about_BMI"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
+            android:name=".Rating_activity"
             android:exported="false" />
+        <activity
+            android:name=".more_about_BMI"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".bmi_chat"
             android:exported="false" />
